--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "packageManager": "yarn@3.3.1",
   "dependencies": {
     "@next/font": "13.1.2",
+    "next": "13.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "prettier": "^2.8.3"
   }
 }
