--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.1.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
