--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "packageManager": "yarn@3.3.1",
   "dependencies": {
-    "@next/font": "13.1.2",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@next/font": "^13",
+    "next": "^13",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@types/node": "^18",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.2",
+    "eslint": "^8",
+    "eslint-config-next": "^13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "^4.9"
   }
 }
