--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^13.1.6",
     "chart.js": "^4.2.0",
+    "framer-motion": "^9.0.2",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
