--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@next/font": "^13.2.1",
+    "@notionhq/client": "^2.2.3",
     "chart.js": "^4.2.1",
+    "encoding": "^0.1.13",
     "framer-motion": "^9.1.7",
     "lodash": "^4.17.21",
     "next": "^13.2.1",
+    "notion-to-md": "^2.5.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
