--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "framer-motion": "^9.1.7",
     "lodash": "^4.17.21",
     "next": "^13.2.1",
+    "next-mdx-remote": "^4.3.0",
     "notion-to-md": "^2.5.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
