--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.5"
+    "react-markdown": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.2.1",
