[notion|md] Add title and refactor notion lib

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,4 @@
 NOTION_API_SECRET_KEY='NOTION_API_SECRET_KEY!'
 
-NOTION_PAGE_ID_1='PAGE_ID!"
+NOTION_PAGE_ID_1='PAGE_ID1'
+NOTION_PAGE_ID_2='PAGE_ID2'
